--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ VITE_SITE_DES = "一个简约的站点监测"
 VITE_SITE_ICP = ""
 
 # 日志天数
-VITE_COUNT_DAYS = 60
+VITE_COUNT_DAYS = 30
 
 # 站点链接外显
 VITE_SHOW_LINKS = false
@@ -28,4 +28,4 @@ VITE_GITHUB_NAME = "EdwinHu-OvO"
 VITE_HOME_URL = "https://www.bytefox.org/"
 
 # 邮箱地址
-VITE_EMAIL_URL = "eidhu66@outlook.com"
+VITE_EMAIL_URL = "edwin@bytefox.org"
